--- a/css/components/radio.scss
+++ b/css/components/radio.scss
@@ -4,7 +4,7 @@
   user-select: none;
 
   &:first-child{
-    margin-right: 16px;
+    margin-right: rem(16px);
   }
 
   &--checkbox{
@@ -28,8 +28,9 @@
 }
 
 .radio__visible{
-  width: 26px;
-  height: 26px;
+  width: rem(26px);
+  height: rem(26px);
+  margin-right: rem(7px);
   position: relative;
   border-radius: 50%;
   background: #fff;
@@ -38,8 +39,8 @@
     content: "";
     position: absolute;
     display: none;
-    width: 14px;
-    height: 14px;
+    width: rem(14px);
+    height: rem(14px);
     background: $red;
     border-radius: 50%;
     top: 50%;
