--- a/css/components/benefit.scss
+++ b/css/components/benefit.scss
@@ -1,26 +1,37 @@
 .benefit{
   text-align: center;
+  @include phones{
+    display: flex; 
+    text-align: left;
+  }
 }
 
 .benefit__title{
-  font-size: 24px;
+  font-size: rem(24px);
   font-weight: bold;
+  @include phones{
+    font-size: rem(24px);
+  }
 }
 
 .benefit__img-wrapper{
   display: inline-block;
-  width: 126px;
-  height: 126px;
+  width: rem(126px);
+  height: rem(126px);
   position: relative;
   background: #F2F5F4;
   border-radius: 50%;
   overflow: hidden;
-  margin-bottom: 24px;
+  margin-bottom: rem(24px);
+  @include phones{
+    margin-bottom: 0; 
+    margin-right: rem(20px);
+  }
 }
 
 .benefit__ico{
-  width: 68px;
-  height: 68px;
+  width: rem(68px);
+  height: rem(68px);
   position: absolute;
   top: 50%;
   left: 50%;
