--- a/css/components/button.scss
+++ b/css/components/button.scss
@@ -1,9 +1,9 @@
 .button{
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 16px;
-  padding: 18px 41px;
-  border-radius: 100px;
+  font-size: rem(16px);
+  padding: rem(18px) rem(41px);
+  border-radius: rem(100px);
   line-height: 1;
   text-decoration: none;
   border: none;
