--- a/css/components/characteristic.scss
+++ b/css/components/characteristic.scss
@@ -3,12 +3,12 @@
 }
 
 .characteristic__img{
-  width: 40px;
-  height: 40px;
-  margin-right: 7px;
+  width: rem(40px);
+  height: rem(40px);
+  margin-right: rem(7px);
 }
 
 .characteristic__info{
-  font-size: 16px;
-  max-width: 114px;
+  font-size: rem(16px);
+  max-width: rem(114px);
 }
