--- a/css/components/form.scss
+++ b/css/components/form.scss
@@ -1,27 +1,38 @@
 form{
   display: flex;
+  flex-direction: column;
+  @include tablets {
+    padding: 0 15%;
+  }
+  @include phones{
+    padding: 0 0; 
+  }
 }
 
 .form__col{
   flex:1;
-  margin-right: 20px;
+  margin-right: rem(20px);
 
   &:last-child{
+    margin-right: 0;
+  }
+
+  @include tablets{
     margin-right: 0;
   }
 }
 
 .form__row{
   display: flex;
-  margin-bottom: 18px;
+  margin-bottom: rem(18px);
 }
 
 .form__block{
   flex: 1;
-  margin-right: 20px;
+  margin-right: rem(20px);
 
   &--margin{
-    margin-bottom: 24px;
+    margin-bottom: rem(24px);
   }
 
   &:last-child{
@@ -32,27 +43,40 @@ form{
 .form__input{
   width: 100%;
   border: none;
-  padding: 18px 11px;
-  border: solid 3px transparent;
-  border-radius: 3px;
+  padding: rem(18px) rem(11px);
+  border: solid rem(3px) transparent;
+  border-radius: rem(3px);
 
   &:focus{
-    border-color: $red;
+    border-color: #E01F3D;
     outline: none;
   }
 
   &--textarea{
-    height: 152px;
+    height: rem(152px);
     resize: none;
+
+    @include tablets{
+      height: rem(82px);
+    }
   }
 }
 
 .form__controls{
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 23px;
+  margin-bottom: rem(23px);
+  
+  @include phones{
+    justify-content: center;
+  }
 }
 
 .form__title{
-  margin-bottom: 5px;
+  margin-bottom: rem(5px);
+}
+
+.form__buttons{
+  display: flex;
+  justify-content: center;
 }
