--- a/css/components/hero.scss
+++ b/css/components/hero.scss
@@ -1,8 +1,13 @@
 .hero{
-  background: url("../../images/Ellipse.png") left 78% center no-repeat;
   background-color: #F5F5F5;
   height: 100vh;
-  min-height: 650px;
+  min-height: rem(650px);
+  
+  &before, &after{
+    @include tablets{
+      display: none;
+    }
+  }
 }
 
 .hero__container{
@@ -10,24 +15,64 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  padding: 24px 0px 50px;
+  padding: rem(24px) rem(0px) rem(50px);
+  background: url("../../images/Ellipse.png") left 78% center no-repeat;
+
+  @include tablets{
+    background: none;
+  }
 }
 
 .hero__text-section{
   width: 46%;
+
+  @include tablets{
+    width: 100%;
+    flex: 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    &:before{
+      content:"";
+      width: 323px;
+      height: 323px;
+      background:  url("../../images/hero-bg-768.png") center center / contain no-repeat;
+      margin-bottom: rem(16px);
+    }
+  }
+}
+
+.hero__icons{
+  @include tablets{
+    display: none;
+  }
 }
 
 .hero__heading{
-  font-size: 48px;
+  font-size: rem(48px);
   line-height: 1.1;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: rem(15px);
   text-transform: uppercase;
+  max-width: 85%;
+  @include phones{
+    font-size: rem(32px);
+  }
 }
 
 .hero__paragraph{
   font-family: "Alegreya Sans";
-  font-size: 21px;
-  margin-bottom: 28px;
+  font-size: rem(21px);
+  margin-bottom: rem(28px);
   padding-right: 25%;
+
+  @include tablets{
+    padding: 0 25%;
+  }
+  @include phones{
+    padding: 0 10%;    
+  }
 }
