--- a/css/components/section.scss
+++ b/css/components/section.scss
@@ -1,16 +1,19 @@
 .section{
   height: 100vh;
-  min-height: 650px;
+  min-height: rem(650px);
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .section__title{
-  font-size: 48px;
+  font-size: rem(48px);
   font-weight: bold;
   text-align: center;
   text-transform: uppercase;
+  @include phones{
+    font-size: rem(32px);
+  }
 }
 
 .section__title--theme--black{
