--- a/css/components/main.scss
+++ b/css/components/main.scss
@@ -35,3 +35,6 @@ $red: #E01F3C;
 @import "./radio.scss";
 @import "./fixed-menu.scss";
 @import "./layout";
+@import "./map.scss";
+@import "./footer.scss";
+@import "./social-networks.scss";
