--- a/css/components/social-networks.scss
+++ b/css/components/social-networks.scss
@@ -1,11 +1,7 @@
-.social-networks{
-  margin-right: 75px;
-}
-
 .social-networks__item{
   display: inline-block;
   vertical-align: middle;
-  margin-right: 5px;
+  margin-right: rem(14px);
 }
 
 .social-networks__item:last-child{
