--- a/css/components/main.css
+++ b/css/components/main.css
@@ -825,9 +825,10 @@ input {
   align-items: center;
   justify-content: space-between;
 }
-
-.footer__phone {
-  align-content: start;
+@media screen and (max-width: 480px) {
+  .footer {
+    flex-direction: column;
+  }
 }
 
 .footer__phone {
@@ -835,20 +836,28 @@ input {
   flex-direction: column;
   align-items: start;
 }
+@media screen and (max-width: 480px) {
+  .footer__phone {
+    align-items: center;
+    margin-bottom: 20px;
+  }
+}
 
 .phone__number:before {
   content: url("../../images/vector.png");
   margin-right: 0.3888888889rem;
 }
 
-.social-networks {
-  margin-right: 75px;
+@media screen and (max-width: 480px) {
+  .phone__adress {
+    margin-bottom: 12px;
+  }
 }
 
 .social-networks__item {
   display: inline-block;
   vertical-align: middle;
-  margin-right: 5px;
+  margin-right: 0.7777777778rem;
 }
 
 .social-networks__item:last-child {
