--- a/css/components/benefits.scss
+++ b/css/components/benefits.scss
@@ -12,7 +12,7 @@
   position: relative;
 
   &:before{
-    content: url("../../images/shapes.png");
+    content: url("../../images/shapes.svg");
     position: absolute;
     top: rem(30px);
     right: 0;
