--- a/css/components/footer.scss
+++ b/css/components/footer.scss
@@ -27,7 +27,7 @@
 
 .phone__number{
   &:before{
-    content: url("../../images/vector.png");
+    content: url("../../images/vector.svg");
     margin-right: rem(7px);
   }
 }
