--- a/css/components/map.scss
+++ b/css/components/map.scss
@@ -6,7 +6,7 @@
 .map{
   position: relative;
   &__link{
-    background: url("../../images/marker.png");
+    background: url("../../images/marker.svg");
   }
   &__item{
     position: absolute;
