--- a/css/components/radio.scss
+++ b/css/components/radio.scss
@@ -12,7 +12,7 @@
       border-radius: 0;
 
       &:before{
-        background: url("../../images/cheked.png") center center no-repeat;
+        background: url("../../images/cheked.svg") center center no-repeat;
       }
     }
   }
