--- a/css/components/delivery-section.scss
+++ b/css/components/delivery-section.scss
@@ -5,7 +5,7 @@
   color: #fff;
   position: relative;
   &:before{
-    content: url("../../images/pentagon.png");
+    content: url("../../images/pentagon.svg");
     position: absolute;
     right: rem(33px);
     top: rem(-27px);
