--- a/css/components/main.scss
+++ b/css/components/main.scss
@@ -38,3 +38,10 @@ $red: #E01F3C;
 @import "./map.scss";
 @import "./footer.scss";
 @import "./social-networks.scss";
+@import "./navbar--vertical.scss";
+@import "./fullscreen-menu.scss";
+@import "./products-section.scss";
+@import "./product.scss";
+@import "./dropdown.scss";
+@import "./value.scss";
+@import "./information.scss";
