--- a/css/components/main.scss
+++ b/css/components/main.scss
@@ -45,3 +45,5 @@ $red: #E01F3C;
 @import "./dropdown.scss";
 @import "./value.scss";
 @import "./information.scss";
+@import "./values.scss";
+@import "./slider.scss";
