--- a/css/components/team.scss
+++ b/css/components/team.scss
@@ -82,4 +82,10 @@
     margin-bottom: 16px;
     margin-right: 0;
   }
+  .team__content{
+    position: relative;
+  }
+  .team__member{
+    margin: 0 auto;
+  }
 }
