--- a/css/components/reviews.scss
+++ b/css/components/reviews.scss
@@ -8,6 +8,27 @@
   }
 }
 
+.reviews__list{
+  position: relative;
+  min-height: 280px;
+}
+
+.reviews__item{
+  position: absolute;
+  top: 0;
+  left: 0;  
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  transition: .3s;
+  opacity: 0;
+  &--active{
+    position: static;
+    opacity: 1;
+    pointer-events: unset;
+  }
+}
+
 .reviews__display {
   background: #F8FAF9;
   padding: rem(42px);
