--- a/css/components/main.scss
+++ b/css/components/main.scss
@@ -48,4 +48,4 @@ $red: #E01F3C;
 @import "./values.scss";
 @import "./slider.scss";
 @import "./team.scss";
-@import "./products.scss";
+@import "./modal.scss";
